Add venue deal seed data
